# HackaGen

./: .env.example  .env.flash.example  .env.pro.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  ROOT_CONTEXT.md  auto-testing.md  docker-compose.yml  make_skill_zip.py  package-lock.json
src/backend/: Dockerfile  main.py  pyproject.toml  requirements.txt  sql_app.db
src/backend/alembic/: env.py
src/backend/api/: admin.py  auth.py
src/backend/books/: course_365a9aba1a38_book.json  course_43826a7bcf62_book.json  course_4c359d37e91e_book.json  course_7d85520a24fa_book.json  course_9e2144776930_book.json  course_df183a97329b_book.json
src/backend/cache/: file_cache.json  provider_cache.json
src/backend/core/: __init__.py  config.py  db.py  prompts.py  security.py
src/backend/data/: users.db
src/backend/indices/: chroma_365a9aba1a38.json  chroma_4c359d37e91e.json  chroma_df183a97329b.json  faiss_16e24e1b0e9a.json  faiss_43826a7bcf62.json  faiss_7d85520a24fa.json  faiss_80040c13b2af.json  faiss_9e2144776930.json  faiss_f81f4b1a3c25.json  simple_eval_test_course.json
src/backend/mindmaps/: course_4c359d37e91e_mindmap.json  course_ec96f8025e87_mindmap.json  course_test_course_mindmap.json
src/backend/models/: learning_profile.py  user.py
src/backend/questions/: course_0200f0018ae0_meta.json  course_02151c1c1633_meta.json  course_03199b541df4_meta.json  course_047dc99ea676_meta.json  course_055112cd7a2b_meta.json  course_0572d400120d_meta.json  course_0d05fcfb5e26_meta.json  course_13ebede4cb5e_meta.json  course_16e24e1b0e9a_meta.json  course_19b66804861c_meta.json  course_1c4e2e1ace1d_meta.json  course_1d7e3e78ce21_meta.json  course_2275926ebf45_meta.json  course_2536760bd963_meta.json  course_2563be2ae336_meta.json  course_26a6785f52a7_meta.json  course_26ec3c6b8881_meta.json  course_28f0e251c12f_meta.json  course_29808569a840_meta.json  course_33b33a7529b7_meta.json  course_365a9aba1a38_meta.json  course_365a9aba1a38_questions.json  course_38a5c28b476e_meta.json  course_3a68c96fd644_meta.json  course_43826a7bcf62_meta.json  course_4c359d37e91e_meta.json  course_4c359d37e91e_questions.json  course_4fa562caf9ca_meta.json  course_55d41009f64d_meta.json  course_5fb44b894d58_meta.json  course_600f65bd46c2_meta.json  course_62056b7866ff_meta.json  course_69dd5fc70dc0_meta.json  course_6a6ff01abe4e_meta.json  course_6b02213f5743_meta.json  course_6da0cdea22d7_meta.json  course_6f744f87cd04_meta.json  course_70b649dbb65d_meta.json  course_733b5b492b6c_meta.json  course_76963046edf5_meta.json  (+54 more)
src/backend/scripts/: reembed_courses.py
src/backend/services/: cache.py  context_cleaner.py  course_gen.py  custom_processor.py  doc_processor.py  jobs.py  storage.py  (+4 more)
(+398 files in other folders)
