[project]
name = "rag-learning-assistant"
version = "3.0.0"
description = "RAG Learning Assistant API - AI Course Generator"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "langchain>=0.2.0,<0.4.0",
    "langchain-community>=0.2.0,<0.4.0",
    "faiss-cpu>=1.8.0,<2.0.0",
    "langchain-google-genai>=2.0.0,<3.0.0",
    "langchain-text-splitters>=0.2.0,<0.4.0",
    "sentence-transformers>=2.2.0,<3.0.0",
    "pymupdf>=1.23.0,<2.0.0",
    "python-docx>=1.0.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pillow>=10.0.0,<13.0.0",
    "edge-tts>=6.1.0,<8.0.0",
    "imageio-ffmpeg>=0.5.0,<1.0.0",
    "pytesseract>=0.3.0,<1.0.0",
    "unidecode>=1.3.0,<2.0.0",
    "google-generativeai>=0.3.0,<1.0.0",
    "google-api-python-client>=2.0.0,<3.0.0",
    "openai>=1.0.0,<2.0.0",
    "aiofiles>=23.0.0,<25.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "ruff>=0.1.0,<0.2.0",
    "black>=24.0.0,<25.0.0",
    "mypy>=1.8.0,<2.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
