[project]
name = "hackagen-backend"
version = "3.0.0"
description = "HackaGen API - Document-to-Study-Pack backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "alembic>=1.13.0,<2.0.0",
    "pyjwt>=2.8.0,<3.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "bcrypt>=4.0.0,<5.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "email-validator>=2.0.0,<3.0.0",
    "chromadb>=0.4.0",
    "pymupdf>=1.23.0",
    "python-docx>=1.1.0",
    "google-genai>=0.1.0",
    "reportlab>=4.0.0",
    "python-pptx>=0.6.21",
    "fonttools>=4.0.0",
    "edge-tts>=7.2.1",
    "imageio-ffmpeg>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "ruff>=0.1.0,<0.3.0",
    "black>=24.0.0,<25.0.0",
    "mypy>=1.8.0,<2.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
